remove unnecessary packages, z-index issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5004,7 +5004,7 @@ p {
   .snipcart-cart-header {
     padding-right: 0;
     padding-left: 0;
-    z-index: 400;
+    z-index: auto;
     height: auto;
     position: relative;
     padding: 32px 16px; } }
