--- a/src/styles/snipcart.scss
+++ b/src/styles/snipcart.scss
@@ -627,8 +627,7 @@
   .snipcart-cart-header {
     padding-right: 0;
     padding-left: 0;
-    // z-index: auto;
-    z-index: 400;
+    z-index: auto;
     height: auto;
     position: relative;
     padding: 32px 16px;
